Fix/roc 9006 sonar issues (#2308)
* ROC-9006 fix sonar code smell issues

* ROC-9006 fix sonar code smell issues

* ROC-9006 fix sonar code smell issues

* ROC-9006 fix sonar code smell issues

* ROC-9006 fix sonar code smell issues

Co-authored-by: Aloknath Datta <alokdatta.uit@gmail.com>
Co-authored-by: mounikahmcts <43175082+mounikahmcts@users.noreply.github.com>